--- a/docs/week1/1.md
+++ b/docs/week1/1.md
@@ -1,4 +1,5 @@
 # [3.5] WEEK 1 
+### 01장. 자료구조와 알고리즘.pdf
 ### 1. 자료구조의 분류
 * 선형자료구조 : 자료를 순서적으로 나열한다. (ex. List, Stack, Queue ... )
 * 비선형자료구조 : 복잡한 연결 관계의 자료 표현이다. (ex. Tree, Graph ... )
@@ -24,13 +25,13 @@
 ``` python 
 import time
 
-mybag = [] // ADT
-start = time.time() // 시작 시간 측정
+mybag = [] # ADT
+start = time.time() # 시작 시간 측정
 ...
-... // Algorithm
+... # Algorithm
 ...
-end = time.time() //종료 시간 측정
-print("실행시간 = ", end - start ) // 알고리즘의 실행 시간
+end = time.time() #종료 시간 측정
+print("실행시간 = ", end - start ) # 알고리즘의 실행 시간
 ```
 
 ### 4-2. 복잡도 분석
