--- a/docs/week2/2.md
+++ b/docs/week2/2.md
@@ -49,7 +49,7 @@ def hanoi_tower(n,fr,tmp,to) :
 ```
 
 ### 6. 순환 알고리즘의 복잡도 계산
-## **재귀 관계식 해결 및 시간 복잡도 분석**
+### 재귀 관계식 해결 및 시간 복잡도 분석
 
 주어진 재귀식:
 
